loopdowhile.Poucet1.scala.error
Compilation error:
Poucet1:15: error: not found: value baggles
  if (baggles <= 2) {
      ^